<resources>
    <string name="app_name">Remotto</string>
    <string name="power_off">Power off</string>
    <string name="turn_on">Turn on</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="mute">Mute</string>
    <string name="settings">Settings</string>
    <string name="more">More</string>
    <string name="keyboard">Keyboard</string>
    <string name="mouse">Mouse</string>
    <string name="enter">Enter</string>
    <string name="copy">Copy</string>
    <string name="paste">Paste</string>
    <string name="backspace">Backspace</string>
    <string name="text">Text</string>
    <string name="type_your_text">Type your text</string>
    <string name="zoom_out">Zoom out</string>
    <string name="zoom_in">Zoom in</string>
    <string name="server_state">Server state:</string>
    <string name="unknown">Unknown</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="device_name">Device name</string>
    <string name="device_name_helper_text">The name that will appear in server list</string>
    <string name="ip_address">IP Address</string>
    <string name="server_ip_address">Server IP address</string>
    <string name="mac_address">MAC address</string>
    <string name="server_mac_address">Server MAC address</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="save">Save</string>
    <string name="preferences_saved">Preferences saved</string>
    <string name="device_name_empty_error">The device name is empty</string>
    <string name="device_name_invalid_error">Invalid device name</string>
    <string name="ip_empty_error">IP is empty</string>
    <string name="ip_invalid_error">Invalid IP</string>
    <string name="mac_empty_error">MAC is empty</string>
    <string name="mac_invalid_error">Invalid MAC</string>
    <string name="camera_permission_denied_error">Camera Permission Denied. Type IP and MAC manually.</string>
    <string name="qr_format_error">Hoje não parça, mais sorte da próxima vez.</string>
    <string name="qr_scan_generic_error">An error occurred. Try typing manually.</string>
    <string name="pairing_info">Pairing info</string>
    <string name="about">About</string>
    <string name="night_mode_and_brightness">Night mode and Brightness</string>
</resources>